4.apr (ws)
      - fix custom palette creation
      (tb)
      - update Dutch translation by Jaap Plaisier
      - update French translation by JLWaltener
3.apr (lv)
      - MusicXML export of credits
      (ws)
      - add default spatium value for new scores to preferences
      - fix: ledger lines wrong for rest in voice2
      - fix: position of slider in play panel
      - fix: playback range does not consider octave markings
      - playback of notes during editing now honors ottava brackets
      - extended instruments list from Magnus Johansson
      - fix shortcut list (preferences)
      - fix style setting of stem direction in multi voice context
      - more clean implementation of play repeats
1.apr (ws)
      - fix: layout position of rests in small staff
30.mar (ws)
      - fix for multi measure rests and volta brackets
      - handle octave transposition as special case: do not respell, keep user set
        accidentals
      - fix: Changing to C Major causes freeze
      - fix: crash during drum note entry
      - added shortcut ctrl+shift+b for "append multiple measures"
      (db)
      - added bongos and temple blocks to instruments lists
      - update handbooks
29.mar (ws)
      - added jazz font and new style option "use jazz font" which gives some
        "real book feeling" for chord names. The implementation & font is currently
       incomplete (lot of symbols are missing).
28.mar (ws)
      - fixed: accidental after a tied note
      - fixed: crash when dropping treble clef over bass clef
27.mar (ws)
      - first code for new search function (Ctrl+F)
26.mar (tb)
      - adding Chinese (Traditional) locale
      - adding initial Swedish language update by Magnus Johansson
24.mar (ws)
      - playback fixes for tied notes
      - clear some fields in the new wizard on second call, especially the
        instrument list and title string
      - fix barlines for grand staff instruments